# austral

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TODO.md  austral.opam  dune-project  run-tests.sh
.github/workflows/: build-and-test.yml  build-macos.yml  release.yml
docs/: platforms.md  releases.md
examples/: Makefile
examples/ffi/: FFI.aum
examples/hello-world/: HelloWorldTest.aum  austral.json
examples/threading/: .gitignore  Makefile  README.md  ThreadDemo.aui  ThreadDemo.aum
lib/: CRenderer.ml  CRepr.ml  CliEngine.ml  CliParser.ml  CliParser.mli  CodeGen.ml  Env.ml  Env.mli  ExtractionPass.ml  Parser.mly  Project.ml  Util.ml  Util.mli  prelude.c  prelude.h
lib/builtin/: Pervasive.aum
standard/: .gitignore  Makefile
standard/src/: Buffer.aum  Equality.aui  Equality.aum  Order.aui  Order.aum  String.aui  String.aum  StringBuilder.aui  StringBuilder.aum
standard/src/IO/: Terminal.aui  Terminal.aum
standard/src/OS/: Environment.aui  Environment.aum  FileSystem.aui  FileSystem.aum  Process.aui  Process.aum  Text.aui  Text.aum
standard/src/System/: Thread.aui  Thread.aum  thread_support.c
standard/test/: Equality.aum  Main.aum  Order.aum  String.aum  StringBuilder.aum
standard/test/IO/: Terminal.aum
standard/test/OS/: Environment.aui  Environment.aum  (+4 more)
test/: CRendererTest.ml  CliParserTest.ml  ProjectConfigTest.ml  ProjectTestCommandTest.ml  dune
test-programs/: Makefile  README.md  runner.py  runner_support.c  runner_support.h
test-programs/runner/: Main.aui  Main.aum  Support.aui  Support.aum
(+58 files in other folders)
